--- a/tab.html
+++ b/tab.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="container">
+      <div ng-view></div>
     </div>
     <script src="./js/vendor/angular.min.js"></script>
     <script src="./js/vendor/angular-route.min.js"></script>
