--- a/tab.html
+++ b/tab.html
@@ -13,5 +13,8 @@
     <script src="./js/vendor/angular.min.js"></script>
     <script src="./js/vendor/angular-route.min.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/controllers/loginController.js"></script>
+    <script src="./js/controllers/walletController.js"></script>
+    <script src="./js/services/dashStorage.js"></script>
   </body>
 </html>
