--- a/tab.html
+++ b/tab.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="container">
+    <div class="container" ng-cloak>
       <div ng-view></div>
     </div>
     <script src="./js/vendor/angular.min.js"></script>
     <script src="./js/vendor/angular-route.min.js"></script>
     <script src="./js/app.js"></script>
-    <script src="./js/controllers/loginController.js"></script>
-    <script src="./js/controllers/walletController.js"></script>
+    <script src="./js/controllers/loginCtrl.js"></script>
+    <script src="./js/controllers/walletCtrl.js"></script>
+    <script src="./js/controllers/firstTimeCtrl.js"></script>
     <script src="./js/services/dashStorage.js"></script>
   </body>
 </html>
