--- a/app/tab.html
+++ b/app/tab.html
@@ -5,6 +5,7 @@
     <title>UR Dashboard</title>
     <link rel="stylesheet" href="css/pure-min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/win8loader.css">
   </head>
   <body>
     <div class="container" ng-cloak>
@@ -13,6 +14,8 @@
     <script src="./js/vendor/angular.min.js"></script>
     <script src="./js/vendor/angular-route.min.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/directives/loader.js"></script>
+    <script src="./js/directives/ngEnter.js"></script>
     <script src="./js/controllers/loginCtrl.js"></script>
     <script src="./js/controllers/walletCtrl.js"></script>
     <script src="./js/controllers/firstTimeCtrl.js"></script>
