Adding login functionality

--- a/app/tab.html
+++ b/app/tab.html
@@ -20,5 +20,6 @@
     <script src="./js/controllers/walletCtrl.js"></script>
     <script src="./js/controllers/firstTimeCtrl.js"></script>
     <script src="./js/services/dashStorage.js"></script>
+    <script src="./js/services/blackboard.js"></script>
   </body>
 </html>
