added funds fetching

--- a/app/tab.html
+++ b/app/tab.html
@@ -16,10 +16,12 @@
     <script src="./js/app.js"></script>
     <script src="./js/directives/loader.js"></script>
     <script src="./js/directives/ngEnter.js"></script>
+    <script src="./js/controllers/dispatcherCtrl.js"></script>
     <script src="./js/controllers/loginCtrl.js"></script>
     <script src="./js/controllers/walletCtrl.js"></script>
     <script src="./js/controllers/firstTimeCtrl.js"></script>
     <script src="./js/services/dashStorage.js"></script>
     <script src="./js/services/blackboard.js"></script>
+    <script src="./js/services/sequoia.js"></script>
   </body>
 </html>
